# launchkit

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  models.py  schemas.py
backend/app/api/: auth.py  billing.py  deps.py  notes.py
backend/app/core/: config.py  db.py  security.py
backend/app/services/: billing.py  provider.py
backend/bench/: baseline.json  bench_notes_list.py  check_regression.py
backend/tests/: conftest.py  test_auth.py  test_billing.py  test_notes.py  test_security_properties.py  test_tenant_isolation.py  test_webhook_contract.py  test_webhook_idempotency.py
web/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/billing/: page.tsx
web/app/dashboard/: page.tsx
web/app/feature/: page.tsx
web/app/signin/: page.tsx
web/app/signup/: page.tsx
web/e2e/: signup.spec.ts
web/lib/: api.test.ts  api.ts
